# ornn

./: .gitignore  Cargo.toml  LICENSE  README.md
crate/ast/: Cargo.toml
crate/generator/src/: lib.rs
crate/parser/src/: lib.rs
crates/ast/src/: lib.rs
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs  move_generator.rs  sol_generator.rs  template_generator.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast_parser.rs  lib.rs
crates/registry/src/: hashmap_registry.rs  lib.rs  memory_registry.rs
crates/structure/: Cargo.toml
crates/structure/src/: ast.rs  comment.rs  lib.rs
examples/cpu-constraint-poly/: CpuConstraintPoly.sol  CpuConstraintPoly.sol.layout6
examples/cpu-constraint-poly/templates/: composition-constraint  cpu_oods.move.template  fallback.function
examples/cpu-constraint-poly/templates/move/: cpu.move.template  load-memory.move.template  memory-map.move.template
examples/cpu-constraint-poly/templates/sol/: a.sol.template  compute-inverse-denominators.sol.template  cpu.sol.template  domain-10.sol.template  domain-12.sol.template  domain-13.sol.template  domain-14.sol.template  domain.sol.template  expmod-8.sol.template  expmod-special.sol.template  expmod-trace-gen-odd.sol.template  expmod-trace-gen-sub.sol.template  expmod-trace-gen.sol.template  expmod.sol.template
src/: lib.rs  main.rs
