[package]
name = "ornn"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/parser",
    "crates/generator",
    "crates/ast",
    "crates/registry",
]

[workspace.dependencies]
regex = "1.10.5"
tera = "1.20.0"
serde_json = "1.0.121"
lazy_static = "1.5.0"
primitive-types = { version = "0.12.2", features = ["serde"] }
hex = "0.4.3"

generator = { path = "crates/generator" }
parser = { path = "crates/parser" }
ast = { path = "crates/ast" }
registry = { path = "crates/registry" }

[dependencies]
regex = { workspace = true }
tera = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
primitive-types = { workspace = true }
hex = { workspace = true }

generator = { workspace = true }
parser = { workspace = true }
ast = { workspace = true }
registry = { workspace = true }

